<resources>
    <string name="app_name">NeWork</string>
    <string name="avatar">Avatar</string>
    <string name="author">Author</string>
    <string name="job">Microsoft</string>
    <string name="empty_list">Empty list</string>
    <string name="like_number_sample">999</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="photo">Photo</string>
    <string name="add_avatar_if_you_want">Add avatar, if you want</string>
    <string name="fill_in_the_following_fields_to_create_an_account">Fill in the following fields to create an account</string>
    <string name="or_create_an_account">Or create an account</string>
    <string name="fill_in_the_following_fields_to_enter_the_account">Fill in the following fields to enter the account</string>
    <string name="incorrect_login_password">Incorrect login/password</string>
    <string name="please_fill_in_all_fields">Please fill in all fields!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="you_have_successfully_registered">You have successfully registered!</string>
    <string name="content">Content</string>
    <string name="speakers">Speakers:</string>
    <string name="participants">Participants: %1$d</string>
    <string name="text_here">Text here</string>
    <string name="link_here">Link here</string>
    <string name="post">POST</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="jobname">JobName</string>
    <string name="job_position">Job position</string>
    <string name="job_period">( %1$s - %2$s )</string>
    <string name="jobs">Jobs:</string>
    <string name="invalid_link">invalid link</string>
    <string name="posts2">Posts:</string>
    <string name="the_user_did_not_provide_information_about_his_job">The user did not provide any information about his job</string>
    <string name="the_user_has_no_posts">The user has no posts</string>
    <string name="company_title">Company title</string>
    <string name="position">Position</string>
    <string name="add">ADD</string>
    <string name="job_start">Job start</string>
    <string name="job_finish">Job finish</string>
    <string name="save">SAVE</string>
    <string name="attachment_link">Attached %1$s: %2$s</string>
    <string name="attachment_url_here">Attachment url here</string>
    <string name="add_to_your_event_post">Add to your event post:</string>
    <string name="longitude_here">Longitude here</string>
    <string name="add_to_your_post">Add to your post:</string>
    <string name="addpostbutton">AddPostButton</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="event_date">Event date</string>
    <string name="describe_the_event_here">Describe the event here</string>
    <string name="event_type">Event type</string>
    <string name="latitude_here">Latitude here</string>
    <string name="logout_button">Logout button</string>
    <string name="add_job_button">Add job button</string>
    <string name="menu_button">Menu button</string>
    <string name="image_attachment">Image attachment</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause button</string>
    <string name="stop_button">Stop button</string>
    <string name="invisible_button">Invisible button</string>
    <string name="play_video_button">Play video button</string>
    <string name="link_button">Link button</string>
    <string name="location_button">Location button</string>
    <string name="i_m_in">I\'m in!</string>
    <string name="add_event_button">Add event button</string>

</resources>