<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/mini_spacing"
    android:layout_marginTop="@dimen/mini_spacing"
    android:layout_marginEnd="@dimen/mini_spacing"
    android:backgroundTint="@color/md_theme_light_surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_spacing"
        android:layout_marginBottom="@dimen/mini_spacing">

        <TextView
            android:id="@+id/jobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mini_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/jobPosition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/jobname" />

        <TextView
            android:id="@+id/jobPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_position"
            app:layout_constraintStart_toStartOf="@id/jobName"
            app:layout_constraintTop_toBottomOf="@id/jobName" />

        <TextView
            android:id="@+id/jobPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mini_spacing"
            android:text="@string/job_period"
            app:layout_constraintStart_toStartOf="@id/jobName"
            app:layout_constraintTop_toBottomOf="@id/jobPosition" />

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/jobPosition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/jobName"
            app:srcCompat="@drawable/ic_more_vert_24"
            android:contentDescription="@string/menu_button" />

        <ImageButton
            android:id="@+id/linkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorTransparent"
            android:padding="@dimen/mini_spacing"
            app:layout_constraintBottom_toBottomOf="@id/jobName"
            app:layout_constraintStart_toEndOf="@id/jobName"
            app:layout_constraintTop_toTopOf="@id/jobName"
            app:srcCompat="@drawable/ic_link_24"
            app:tint="@color/md_theme_dark_primary"
            android:contentDescription="@string/link_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
